[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/panel_char_details.tscn" type="PackedScene" id=1]
[ext_resource path="res://rooms/test/room_move_test.tscn" type="PackedScene" id=2]
[ext_resource path="res://rooms/test/battle_screen.gd" type="Script" id=3]
[ext_resource path="res://objects/submenu_example.tscn" type="PackedScene" id=4]

[node name="BattleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 540 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
top_level_ui_path = NodePath("TopLevelUI")
char_hud_1_path = NodePath("HBoxContainer/HUDContainer/HUDView/MarginContainer/VBoxContainer/CharacterHUD1")
char_hud_2_path = NodePath("HBoxContainer/HUDContainer/HUDView/MarginContainer/VBoxContainer/CharacterHUD2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 640.0
margin_bottom = 540.0
rect_min_size = Vector2( 640, 540 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelView" type="Viewport" parent="HBoxContainer/LevelContainer"]
size = Vector2( 640, 540 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0

[node name="Stage" parent="HBoxContainer/LevelContainer/LevelView" instance=ExtResource( 2 )]

[node name="HUDContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 640.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 1

[node name="HUDView" type="Viewport" parent="HBoxContainer/HUDContainer"]
size = Vector2( 320, 540 )
handle_input_locally = false
render_target_update_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HUDContainer/HUDView"]
margin_right = 321.0
margin_bottom = 540.0
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/HUDContainer/HUDView/MarginContainer"]
margin_right = 321.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.827451, 0.733333, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/HUDContainer/HUDView/MarginContainer"]
margin_right = 321.0
margin_bottom = 540.0
custom_constants/separation = 0

[node name="CharacterHUD1" parent="HBoxContainer/HUDContainer/HUDView/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]

[node name="CharacterHUD2" parent="HBoxContainer/HUDContainer/HUDView/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 192.0
margin_bottom = 384.0

[node name="TopLevelUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" parent="TopLevelUI" instance=ExtResource( 4 )]
visible = false
margin_right = 60.0
margin_bottom = 69.0
mouse_filter = 2
